fixing burger so its not changing when on mobile

--- a/styles/frontpage.css
+++ b/styles/frontpage.css
@@ -106,6 +106,7 @@ nav {
     }
 
     nav {
+        position: fixed;
         padding-top: 0px;
         background-color: #C5E6E0;
     }
